<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/swipe_layout"
    android:layout_height="wrap_content">
    <!-- Bottom View Start-->
    <LinearLayout
        android:id="@+id/btn_delete"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_delete"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- Bottom View End-->

    <!-- Surface View Start -->
    <LinearLayout
        android:id="@+id/drag_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/item_padding">

            <TextView
                android:id="@+id/tv_story_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story_title_example_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_detail"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_item_example"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_spacer" />

                <TextView
                    android:id="@+id/tv_create_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at_example"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
    <!-- Surface View End -->
</com.daimajia.swipe.SwipeLayout>
